--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	//id 'war'
 }
 
 group = 'com.crud'
@@ -10,6 +11,10 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+}
+
+jar {
+	enabled = false
 }
 
 dependencies {
@@ -23,6 +28,10 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
+
+	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
 }
 
 tasks.named('test') {
