--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	//id 'war'
 }
 
 group = 'com.crud'
@@ -30,8 +29,8 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
 
-	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 tasks.named('test') {
