--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	testImplementation 'com.google.code.gson:gson'
 }
 
 tasks.named('test') {
