--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,13 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
 
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	//implementation 'io.springfox:springfox-swagger2:2.9.2'
+	//implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 
 	testImplementation 'com.google.code.gson:gson'
 }
