--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.protocol=smtp
 
-
+admin.name=Grzegorz
 admin.mail=zombiepara@gmail.com
 
 management.endpoints.web.exposure.include=*
