--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.mail.protocol=smtp
 
 admin.name=Grzegorz
 admin.mail=zombiepara@gmail.com
+company.name=GrzegorzS.A.
 
 management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
